RESOLVED FIXED271972
ASSERTION FAILED (!m_inStyleRecalc) in Document::usesStyleBasedEditability() when inline media controls are presented
https://bugs.webkit.org/show_bug.cgi?id=271972
Summary ASSERTION FAILED (!m_inStyleRecalc) in Document::usesStyleBasedEditability() ...
alan
Reported 2024-04-01 10:53:02 PDT
Attachments
[fast-cq]Patch (4.48 KB, patch)
2024-04-01 11:01 PDT, alan
no flags
alan
Comment 1 2024-04-01 11:01:21 PDT
Created attachment 470697 [details] [fast-cq]Patch
EWS
Comment 2 2024-04-03 08:13:10 PDT
Committed 277000@main (38f64dda7344): <https://commits.webkit.org/277000@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470697 [details].
Note You need to log in before you can comment on or make changes to this bug.