ASSERTION FAILED (!m_inStyleRecalc) in Document::usesStyleBasedEditability() when inline media controls are presented https://bugs.webkit.org/show_bug.cgi?id=271972 <rdar://125502350>

Reviewed by Antti Koivisto.

ContentChangeObserver::isConsideredActionableContent is called when we finished updating the element (see RenderTreeUpdater::updateElementRenderer)
meaning computed style (including descendants) should be all up-to-date.

* Source/WebCore/dom/Node.cpp:
(WebCore::Node::willRespondToMouseClickEvents const):
* Source/WebCore/dom/Node.h:
* Source/WebCore/page/ios/ContentChangeObserver.cpp:
(WebCore::ContentChangeObserver::isConsideredActionableContent const):

Canonical link: https://commits.webkit.org/277000@main